# edubot_bringup

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: ekf.yaml
launch/: bringup.launch.py  default.rviz  teleop.launch.py
