<?xml version="1.0"?>
<package format="3">
  <name>omnibot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for Omnidirectional Robot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Laufzeit-Abhängigkeiten -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>omnibot_description</exec_depend>
  <exec_depend>omnibot_hardware</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
