<?xml version="1.0"?>
<package format="3">
  <name>edubot_bringup</name>
  <version>0.0.2</version>
  <description>Bringup launch files for the EduBot robot.</description>

  <maintainer email="info@vectoral.ch">Vectoral</maintainer>
  <author>Stefan Siegler</author>
  <license file="LICENSE">PolyForm-Perimeter-1.0.0</license>

  <url type="repository">https://github.com/vectoral-robotics/edubot_bringup</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies: bringup orchestrates these -->
  <exec_depend>edubot_description</exec_depend>
  <exec_depend>edubot_hardware</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Optional: include if you sometimes use the GUI publisher -->
  <exec_depend>joint_state_publisher</exec_depend>
  <!-- <exec_depend>joint_state_publisher_gui</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
